Refactor indicators: move definition config to DB, combine outputs as JSONB, and split indicator values by daily/weekly timeframes